add filter data anak if nama_anak in data anak in same user_id is the same . and fix the register msg alert
Co-Authored-By: zulfatunnisa <80380143+zulfatunnisa@users.noreply.github.com>

--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -215,8 +215,8 @@
           success: function(response) {
               // Proses respons dari server
               console.log(response);
-              alert("login berhasil");
-              window.location.href = response.redirect_url;
+              alert(pesan);
+              window.location.href = "/login";
           },
           error: function(xhr) {
             // Tangani dan tampilkan pesan error dari server
