--- a/app/templates/ganti_password.html
+++ b/app/templates/ganti_password.html
@@ -59,13 +59,13 @@
   </nav>
 
   <!-- Call to Action Section -->
-  <section class="container my-5" >
-    <div class="card border-medium" style="border-radius: 20px;">
+  <section class="container my-5"style="border-color: #1F4590;" >
+    <div class="card border-medium" style="border-radius: 20px; border-color: #1F4590;">
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning">Ganti Password</h1>
             <form class="form text-center" id="form-now">
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_lama" name="password" placeholder="password lama"><br>
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_baru" name="password" placeholder="password baru"><br>
+                <input class="btn  mt-3 mb-3 text-center col-md-6 font-semibold font-regular" style="border-color: #1F4590;" type="password" id="password_lama" name="password" placeholder="password lama"><br>
+                <input class="btn  mb-3 text-center col-md-6 font-semibold font-regular" style="border-color: #1F4590;" type="password" id="password_baru" name="password" placeholder="password baru"><br>
                 <button id="submit" type="button" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
                 <h4 class="font-semibold" style="margin-bottom: 0px;">Submit</h4>
                 </button>
