--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -58,7 +58,7 @@
     .border-medium { border-radius: 10px; }
   </style>
 </head>
-<body>
+<body >
 
 <div class="wrapper">
   {% with messages = get_flashed_messages() %}
@@ -77,8 +77,8 @@
   </a>
 
   <div class="title-text">
-    <div class="title login">Login</div>
-    <div class="title signup">Registrasi</div>
+    <div class="title login">Login <img src="/static/icon/eye.svg" width="30px" height="30px" alt="logooo"></div>
+    <div class="title signup">Registrasi <img src="/static/icon/eye.svg" width="30px" height="30px" alt="logooo"></div>
   </div>
   <div class="form-container">
     <div class="slide-controls">
