ubah tampilan lagi
Co-Authored-By: zulfatunnisa <80380143+zulfatunnisa@users.noreply.github.com>

--- a/app/templates/admin/history_konsultasi.html
+++ b/app/templates/admin/history_konsultasi.html
@@ -187,15 +187,47 @@
           </div>
           <div class="mt-2 mb-4">
             <form id="filterForm" method="GET">
-              <div class="form-row">
-                <div class="form-group col-md-12">
-                  <label for="filterCompleteDate">Tanggal</label>
-                  <input type="date" class="form-control" id="filterCompleteDate" name="filterCompleteDate" value="{{ request.args.get('filterCompleteDate') }}">
-                </div>
+              <div class="form-row d-flex">
+                          <div class="col-lg-1">
+                              <a href="{{ url_for('user_history_konsultasi') }}" class="btn w-100 btn-secondary">Reset</a>
+                          </div>
+                          <div class="col-lg-2">
+                              <input type="text" class="w-100 form-control" id="filteranything" name="filteranything" placeholder="Cari apapun" value="{% if request.args.get('filteranything') %}{{ request.args.get('filteranything') }}{% endif %}">
+                          </div>
+                          <div class="col-lg-1">
+                              <button type="submit" class="btn w-100 btn-primary">Cari</button>
+                          </div>
+                  <div class="form-group col-2">
+                      <select name="filterYear" class="form-control w-100">
+                          <option value="">Pilih Tahun</option>
+                          {% for year in years %}
+                          {% if request.args.get('filterYear') == year %}
+                          <option value="{{ year }}" checked aria-checked="true" class="clicked" clicked>{{ year }}</option>
+                          {% else %}
+                          <option value="{{ year }}">{{ year }}</option>
+                          {% endif %}
+                          {% endfor %}
+                      </select>
+                  </div>
+                  <div class="col-lg-2">
+                      <select name="filterMonth" class="form-control w-100">
+                          <option value="">Pilih Bulan</option>
+                          {% for month in months %}
+                          {% if request.args.get('filterMonth') == month %}
+                          <option value="{{ month.value }}" checked aria-checked="true" class="clicked" clicked>{{ month.name }}</option>
+                          {% else %}
+                          <option value="{{ month.value }}">{{ month.name }}</option>
+                          {% endif %}
+                          {% endfor %}
+                      </select></div>
+                  <div class="form-group col-2">
+                      <input type="date" class="form-control w-100" id="filterCompleteDate" name="filterCompleteDate" value="{{ request.args.get('filterCompleteDate') }}">
+                  </div>
+                  <div class="form-group col-1">
+                      <button type="submit" class="btn btn-primary w-100">Filter</button>
+                  </div>
               </div>
-              <button type="submit" class="btn btn-primary">Filter</button>
-              <a href="{{ url_for('history_konsultasi') }}" class="btn btn-secondary">Reset</a>
-            </form>
+          </form>
           </div>
           <div class="table-responsive">
             <table class="table table-bordered" id="data-table">
