--- a/app/templates/user/history_konsultasi.html
+++ b/app/templates/user/history_konsultasi.html
@@ -19,7 +19,7 @@
                                     <a href="{{ url_for('user_history_konsultasi') }}" class="btn w-100 btn-secondary">Reset</a>
                                 </div>
                                 <div class="col-lg-2">
-                                    <input type="text" class="w-100 form-control" id="filteranything" name="filteranything" placeholder="Cari apapun" value="{% if request.args.get('filteranything') %}{{ request.args.get('filteranything') }}{% endif %}">
+                                    <input type="text" class="w-100 form-control" id="filteranything" name="filteranything" placeholder="Search" value="{% if request.args.get('filteranything') %}{{ request.args.get('filteranything') }}{% endif %}">
                                 </div>
                                 <div class="col-lg-1">
                                     <button type="submit" class="btn w-100 btn-primary">Cari</button>
@@ -97,7 +97,7 @@
 
 <script>
 $(document).ready(function() {
-    $('#data-table').DataTable();
+    $('#data-table').DataTable({searching: false});
 })
 </script>
 {% endblock %}
