--- a/app/templates/admin/history_konsultasi.html
+++ b/app/templates/admin/history_konsultasi.html
@@ -189,7 +189,7 @@
             <form id="filterForm" method="GET">
               <div class="form-row d-flex">
                           <div class="col-lg-1">
-                              <a href="{{ url_for('user_history_konsultasi') }}" class="btn w-100 btn-secondary">Reset</a>
+                              <a href="{{ url_for('history_konsultasi') }}" class="btn w-100 btn-secondary">Reset</a>
                           </div>
                           <div class="col-lg-2">
                               <input type="text" class="w-100 form-control" id="filteranything" name="filteranything" placeholder="Search" value="{% if request.args.get('filteranything') %}{{ request.args.get('filteranything') }}{% endif %}">
