--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -58,12 +58,46 @@
     .border-medium { border-radius: 10px; }
     .field { position: relative; }
     .field-icon { position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer; }
+    /* Tambahkan atau ubah CSS untuk mendukung layout yang diminta */
+.container-fluid {
+  height: 100vh;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.bg-image img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+.wrappe{
+  display: grid; height: 100%; width: 100%; place-items: center; 
+}
+@media (max-width: 767px) {
+  .bg-image {
+    display: none;
+  }
+  .wrapper {
+    max-width: 100%;
+    padding: 20px;
+  }
+}
+
   </style>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
 </head>
 <body >
-
+  <div class="container-fluid">
+    <div class="row no-gutters">
+      <div class="col-lg-6 bg-image d-none d-lg-block flex-start">
+        <img src="/static/image/bg_tips.svg" class="w-100 img-fluid" alt="omaga">
+      </div>
+      <div class="col-lg-6">
+        <div class="wrappe" >
+          <!-- Isi form login dan registrasi tetap sama seperti sebelumnya -->
+    <div class=""></div>
 <div class="wrapper">
   {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -77,7 +111,7 @@
   {% endwith %}
 
   <a class="navbar-brand d-flex" href="/">
-    <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
+    <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids <img src="/static/icon/eye.svg" style="margin-left: 5px; margin-bottom: 10px;" width="30px" height="30px" alt="logooo"/></p>
   </a>
 
   <div class="title-text">
@@ -132,6 +166,11 @@
       </form>
     </div>
   </div>
+</div>
+<div>
+</div>
+</div>
+</div>
 </div>
 
 <script>
