--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -91,8 +91,11 @@
 <body >
   <div class="container-fluid">
     <div class="row no-gutters">
-      <div class="col-lg-6 bg-image d-none d-lg-block flex-start">
-        <img src="/static/image/bg_tips.svg" class="w-100 img-fluid" alt="omaga">
+      <div class="col-lg-6 bg-image d-none center d-lg-block flex-start">
+        <img src="/static/image/eye_2.jpg" class="img-fluid" style="width: 80%;" alt="omaga">
+        <!-- <img src="/static/image/eye_2.jpg" class="img-fluid" style="width: 80%;" alt="omaga"> -->
+        <!-- <img src="/static/image/eye_3.webp" class="w-100 img-fluid" alt="omaga"> -->
+        <!-- <img src="/static/image/bg_tips.svg" class="w-100 img-fluid" alt="omaga"> -->
       </div>
       <div class="col-lg-6">
         <div class="wrappe" >
