--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -92,10 +92,11 @@
   <div class="container-fluid">
     <div class="row no-gutters">
       <div class="col-lg-6 bg-image d-none center d-lg-block flex-start">
-        <img src="/static/image/eye_2.jpg" class="img-fluid" style="width: 80%;" alt="omaga">
+        <!-- <img src="/static/image/eye_2.jpg" class="img-fluid" style="width: 80%;" alt="omaga"> -->
         <!-- <img src="/static/image/eye_2.jpg" class="img-fluid" style="width: 80%;" alt="omaga"> -->
         <!-- <img src="/static/image/eye_3.webp" class="w-100 img-fluid" alt="omaga"> -->
         <!-- <img src="/static/image/bg_tips.svg" class="w-100 img-fluid" alt="omaga"> -->
+        <img src="/static/image/eye_4.png" class="w-100 img-fluid" alt="omaga">
       </div>
       <div class="col-lg-6">
         <div class="wrappe" >
